--- a/package.json
+++ b/package.json
@@ -170,5 +170,6 @@
     "@types/node": "^16.11.43",
     "@types/vscode": "1.56.0",
     "esbuild": "^0.21.4"
-  }
+  },
+  "packageManager": "yarn@4.9.4"
 }
