--- a/package.json
+++ b/package.json
@@ -157,7 +157,8 @@
     "vscode:prepublish": "npm run build",
     "esbuild-base": "esbuild ./src/index.ts --bundle --outfile=index.js --external:vscode --format=cjs --platform=node",
     "build": "npm run -S esbuild-base -- --minify",
-    "watch": "npm run -S esbuild-base -- --sourcemap --watch"
+    "watch": "npm run -S esbuild-base -- --sourcemap --watch",
+    "build:vsix": "npx @vscode/vsce package --no-yarn --out php-cs-fixer.vsix"
   },
   "dependencies": {
     "anymatch": "^3.1.3",
@@ -169,6 +170,7 @@
   "devDependencies": {
     "@types/node": "^16.11.43",
     "@types/vscode": "1.56.0",
+    "@vscode/vsce": "^3.6.0",
     "esbuild": "^0.21.4"
   },
   "packageManager": "yarn@4.9.4"
