--- a/package.json
+++ b/package.json
@@ -156,9 +156,10 @@
   "scripts": {
     "vscode:prepublish": "npm run build",
     "esbuild-base": "esbuild ./src/index.ts --bundle --outfile=index.js --external:vscode --format=cjs --platform=node",
-    "build": "npm run -S esbuild-base -- --minify",
+    "build": "npm run build:es && npm run build:vsix",
     "watch": "npm run -S esbuild-base -- --sourcemap --watch",
-    "build:vsix": "npx @vscode/vsce package --no-yarn --out php-cs-fixer.vsix"
+    "build:vsix": "npx @vscode/vsce package --no-yarn --out php-cs-fixer.vsix",
+    "build:es": "npm run -S esbuild-base -- --minify"
   },
   "dependencies": {
     "anymatch": "^3.1.3",
